Bug 124482 - favicons for URLs with different port numbers are mixed
Summary: favicons for URLs with different port numbers are mixed
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 129226 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-03-29 11:13 UTC by Ingo Klöcker
Modified: 2011-06-11 00:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ingo Klöcker 2006-03-29 11:13:31 UTC
Version:           3.5.1 (using KDE 3.5.1 Level "a" , SUSE 9.3 UNSUPPORTED)
Compiler:          gcc version 3.3.5 20050117 (prerelease) (SUSE Linux)
OS:                Linux (i686) release 2.6.11.4-21.11-default

Konqueror doesn't differentiate between favicons coming from the same URLs except for different port numbers, e.g. Konqueror shows the same favicon for http://localhost/ and http://localhost:8080/ even though http://localhost/favicon.ico is different from http://localhost:8080/favicon.ico.

Proposed fix: Don't ignore the port number when dealing with favicons.
Comment 1 Jaime Torres 2008-05-16 18:26:01 UTC
I am able to reproduce it with trunk 20080507 using cups and an apache.
Comment 2 Jonathan Marten 2009-02-04 14:42:49 UTC
*** Bug 129226 has been marked as a duplicate of this bug. ***
Comment 3 Dawit Alemayehu 2011-06-11 00:39:16 UTC
Git commit aaa3b61edc4cdeaf67c8a3d6a0eacbd15e044469 by Dawit Alemayehu.
Committed on 09/06/2011 at 20:20.
Pushed by adawit into branch 'KDE/4.6'.

Include the port number in the favicon URL name.

BUG: 124482
FIXED-IN: 4.6.5
REVIEW: 101577

M  +10   -2    lib/konq/favicons/favicons.cpp     

http://commits.kde.org/kde-baseapps/aaa3b61edc4cdeaf67c8a3d6a0eacbd15e044469
Comment 4 Dawit Alemayehu 2011-06-11 00:39:48 UTC
Git commit 9f66e3d20950406ec81447a83f1c2944a30a58e8 by Dawit Alemayehu.
Committed on 09/06/2011 at 20:20.
Pushed by adawit into branch 'master'.

Include the port number in the favicon URL name.

BUG: 124482
FIXED-IN: 4.6.5
REVIEW: 101577

(cherry picked from commit aaa3b61edc4cdeaf67c8a3d6a0eacbd15e044469)

M  +10   -2    lib/konq/favicons/favicons.cpp     

http://commits.kde.org/kde-baseapps/9f66e3d20950406ec81447a83f1c2944a30a58e8