Include the port number in the favicon URL name.

BUG: 124482
FIXED-IN: 4.6.5
REVIEW: 101577

(cherry picked from commit aaa3b61edc4cdeaf67c8a3d6a0eacbd15e044469)